# that-s-what-I-said

./: .eslintignore  .eslinttrc.js  README-md  README.md  gem-analysis-combined-2025-06-17_19-54-22.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  typedoc.json  vite.config.ts
.gem-reports/gem-analysis-2025-06-17_12-14-46/: 01-Security-Testing-20250617-121446.json  02-Technical-Validation-20250617-121446.json  03-Code-Quality-20250617-121447.json  04-Peer-Review-20250617-121447.json  GUARDIAN-ANALYSIS-REQUIRED.md  collection-manifest.json
.gem-reports/gem-analysis-2025-06-17_12-44-30/: 05-Red-Team-20250617-124430.json  GUARDIAN-ANALYSIS-REQUIRED.md  collection-manifest.json
.svelte-kit/: ambient.d.ts
ai-constraints/: .ai-constraints.md  .ai-guardian-restraints.md  AI_ASSISTANT_INSTRUCTIONS.md  AI_CODER_MASTER_PROMPT.md  AI_CODER_SYSTEM_PROMPT.md  PROJECT_BOOTSTRAP_INSTRUCTIONS.md  ai-constraint-profiles.json  ai-metrics.md
docs/: Parser Analysis and Transformation Guide.md  Project Concept.md  Project Orchestration Framework.md  ROADMAP.md  Technical Specifications.md  next_prompts.md  project_structure_summary.md  typedoc-custom.css
scripts/: validate-constraints.js
src/: app.html  app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: crypto.ts  database.ts  fileImporter.ts  importValidation.ts  parserRegistry.ts  types.ts
src/routes/: +page.svelte
src/tests/: chatgpt-parser.test.ts  claude-parser.test.ts  content-sanitizer.test.ts  crypto.test.ts  database.test.ts  (+7 more)
(+7 files in other folders)
